Bug 139004 - Crash with non-debug & assertion dynamic_cast<SwTextFormatColl const*>(static_cast<const SwFormatChg*>(pOldValue)->pChangedFormat)", file=ndtxt.cxx", line=5437
Summary: Crash with non-debug & assertion dynamic_cast<SwTextFormatColl const*>(static...
Status: RESOLVED FIXED
Alias: None
Product: LibreOffice
Classification: Unclassified
Component: Writer (show other bugs)
Version:
(earliest affected)
4.0.0.3 release
Hardware: All All
: medium critical
Assignee: Matt K
URL:
Whiteboard: target:24.8.0
Keywords: bibisectRequest, haveBacktrace, regression
Depends on:
Blocks: Styles Crash
  Show dependency treegraph
 
Reported: 2020-12-17 16:39 UTC by Telesto
Modified: 2024-03-02 00:40 UTC (History)
4 users (show)

See Also:
Crash report or crash signature: ["SwList::IsListLevelMarked(int)","SwList::IsListLevelMarked(int) const","SwTextNode::HasMarkedLabel() const"]


Attachments
Example file (50.05 KB, application/vnd.oasis.opendocument.text)
2020-12-17 16:39 UTC, Telesto
Details
gdb bt (12.24 KB, text/plain)
2022-12-30 20:43 UTC, Julien Nabet
Details

Note You need to log in before you can comment on or make changes to this bug.
Description Telesto 2020-12-17 16:39:05 UTC
Description:
Crash deleting applied footnote paragraph style

Steps to Reproduce:
1. Open Writer
2. Place cursor in the footnote
3. Expand the footnote styles in sidebar (Footnote is applied)
4. Double click untitled (child style)
5. Place the cursor in the footnote again and press enter in the text (somewhere) (bullet appears)
6. Right click the Untitled style -> Delete 
7. Crash 

Actual Results:
Crash

Expected Results:
No crash


Reproducible: Always


User Profile Reset: No



Additional Info:
Version: 7.2.0.0.alpha0+ (x64)
Build ID: e97a81e94511b52987a50b7bdb72c922899da588
CPU threads: 4; OS: Windows 6.3 Build 9600; UI render: Skia/Raster; VCL: win
Locale: nl-NL (nl_NL); UI: nl-NL
Calc: CL
Comment 1 Telesto 2020-12-17 16:39:22 UTC
Created attachment 168261 [details]
Example file
Comment 2 Telesto 2020-12-17 16:42:42 UTC
Also in
Version: 6.2.9.0.0+ (x86)
Build ID: 5f01fe15eb2661f1f9ce12d1d99dc2a705b462ee
CPU threads: 4; OS: Windows 6.3; UI render: GL; VCL: win; 
Locale: nl-NL (nl_NL); UI-Language: en-US
Calc: CL

and in
4.4.7.2

and 
4.0
Comment 3 Xisco Faulí 2020-12-18 17:58:32 UTC
Reproduced in

Version: 7.2.0.0.alpha0+
Build ID: 8b3982681e98818388c09233960ad6eaacee205a
CPU threads: 4; OS: Linux 5.7; UI render: default; VCL: gtk3
Locale: en-US (en_US.UTF-8); UI: en-US
Calc: threaded
Comment 4 Telesto 2022-12-28 22:48:44 UTC
Still crashing
Version: 7.6.0.0.alpha0+ (X86_64) / LibreOffice Community
Build ID: 8635c9aa8c6f1078a9e220076d5a08daf30077e8
CPU threads: 8; OS: Mac OS X 12.3.1; UI render: Skia/Raster; VCL: osx
Locale: nl-NL (nl_NL.UTF-8); UI: en-US
Calc: threaded
Comment 5 Julien Nabet 2022-12-30 20:43:31 UTC
Created attachment 184400 [details]
gdb bt

On pc Debian x86-64 with master sources updated today, I could reproduce this.
Here's bt and some infos from gdb.
Comment 7 Matt K 2024-02-03 23:17:55 UTC
Fix is available at: https://gerrit.libreoffice.org/c/core/+/162965
Comment 8 Commit Notification 2024-02-28 21:08:58 UTC
Matt K committed a patch related to this issue.
It has been pushed to "master":

https://git.libreoffice.org/core/commit/6a064b1967e06e40be40817deff99d00c1a8554f

tdf#139004 Prevent crash when deleting footnote styles

It will be available in 24.8.0.

The patch should be included in the daily builds available at
https://dev-builds.libreoffice.org/daily/ in the next 24-48 hours. More
information about daily builds can be found at:
https://wiki.documentfoundation.org/Testing_Daily_Builds

Affected users are encouraged to test the fix and report feedback.