tdf#139004 Prevent crash when deleting footnote styles

The problem was that a pointer was assumed valid, but
was not, so now we check the value of the pointer
before using it.  Works now to delete footnote style.

Also, change assert to variable check to ensure the
proper method is only called when it is supposed to
be, and to prevent a failing assert.  We add a new
Destr method on SwFormat so that it can be called
from the SwTextFormatColl context and thus avoid
the assert.

Change-Id: Ia4b8029fb89e627cd685b3317606e2b9d60cf248
Reviewed-on: https://gerrit.libreoffice.org/c/core/+/162965
Tested-by: Jenkins
Reviewed-by: Matt K <mattkse@gmail.com>